--- a/style/tailwind.css
+++ b/style/tailwind.css
@@ -19,6 +19,9 @@
     .active-tab {
         @apply text-center block border border-blue-500 rounded py-2 px-4 bg-blue-500 hover:bg-blue-700 text-gray-900;
     }
+    .disabled-tab {
+        @apply block py-2 px-4 text-gray-500 cursor-not-allowed bg-gray-300;
+    }
 
     .default-tab{
         @apply text-center block border bg-gray-200 border-white rounded hover:border-gray-200 text-gray-900 hover:bg-gray-300 py-2 px-4;
