--- a/ruche/style/tailwind.css
+++ b/ruche/style/tailwind.css
@@ -59,6 +59,10 @@ html {
     .active-tab {
         @apply text-center block border border-blue-500 rounded py-2 px-4 bg-blue-500 hover:bg-blue-700 text-gray-900;
     }
+
+    .default-ig-tab {
+        @apply text-center block border border-green-400 rounded py-2 px-4 bg-green-400 hover:bg-green-700 text-gray-900;
+    }
     .disabled-tab {
         @apply block py-2 px-4 text-gray-200 cursor-not-allowed bg-gray-700 rounded border border-gray-700;
     }
