--- a/ruche/input.css
+++ b/ruche/input.css
@@ -1,12 +1,54 @@
-@import "./champions.css";
-@import "./summoner_spells.css";
-@import "./perks.css";
-@import "./items.css";
+@import "tailwindcss";
+@import "./style/champions.css";
+@import "./style/summoner_spells.css";
+@import "./style/perks.css";
+@import "./style/items.css";
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
+
+@theme{
+    --color-red-50: #FDEDEF;
+    --color-red-100: #FBDBDF;
+    --color-red-200: #F6B2BB;
+    --color-red-300: #F18D9B;
+    --color-red-400: #EC6476;
+    --color-red-500: #E84057;
+    --color-red-600: #D11932;
+    --color-red-700: #9F1326;
+    --color-red-800: #690D19;
+    --color-red-900: #37070D;
+    --color-red-950: #1B0306;
+    --color-blue-50: #EDF2FD;
+    --color-blue-100: #DBE5FA;
+    --color-blue-200: #BCCFF6;
+    --color-blue-300: #98B5F1;
+    --color-blue-400: #749CEC;
+    --color-blue-500: #5384E8;
+    --color-blue-600: #1D5DDC;
+    --color-blue-700: #1646A6;
+    --color-blue-800: #0F3070;
+    --color-blue-900: #071736;
+    --color-blue-950: #040B1B;
+}
+
+@source inline('text-blue-400');
+@source inline('text-green-400');
+@source inline('text-orange-400');
+@source inline('bg-indigo-500');
+@source inline('bg-zinc-700');
+@source inline('text-red-500');
+@source inline('text-blue-500');
+@source inline('bg-red-500');
+@source inline('bg-blue-400');
+@source inline('bg-red-400');
+@source inline('text-blue-300');
+@source inline('bg-red-900');
+@source inline('bg-blue-900');
+@source inline('bg-red-600');
+@source inline('bg-blue-600');
+@source inline('border-red-500');
+@source inline('border-blue-500');
+@source inline('text-red-300');
 
 /* not default size sprite*/
 /*add width and height*/
